upgrade to java 25 untested